# Bazlama.PersistedObject

./: .gitignore  README.md
example/: README.md
example/backend/: .gitignore  README.md  main.py  pyproject.toml
example/backend/scripts/: run-server.bat  run-server.sh  setup.bat  setup.sh
example/backend/src/: database.py  models.py
example/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
example/frontend/src/: App.tsx  main.tsx
example/frontend/src/components/: PriorityIndicator.tsx
example/frontend/src/pages/: ApiKeysPage.tsx  BlogPostsPage.tsx  CategoriesPage.tsx  EventsPage.tsx  SettingsPage.tsx  TagsPage.tsx
examples/basic/: HOOKS_USAGE.md  README.md
examples/basic/backend/: .env.example  main.py
examples/basic/backend/scripts/: seed-data.bat  seed-data.sh  setup.bat  setup.sh
examples/basic/backend/src/: __init__.py  hooks.py  models.py  seed_data.py
examples/basic/frontend/: HOOKS_USAGE.md  index.html  run-dev.bat  setup.bat  tsconfig.json  vite.config.ts
examples/basic/frontend/src/: App.tsx  main.tsx
examples/basic/frontend/src/components/: StatusBadge.tsx
examples/basic/frontend/src/pages/: ProjectsPage.tsx  UsersPage.tsx
examples/dynamic/backend/: main.py  pyproject.toml
examples/dynamic/backend/scripts/: run-server.sh  setup.sh
examples/dynamic/backend/src/: database.py  dynamic_manager.py  models.py
examples/dynamic/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/dynamic/frontend/src/: App.tsx  main.tsx  types.ts
examples/dynamic/frontend/src/components/: ModelBuilder.tsx  PriorityIndicator.tsx  StatusBadge.tsx
examples/dynamic/frontend/src/hooks/: useModels.ts
python/: README.md  pyproject.toml
python/src/: __init__.py  base.py  exceptions.py  fields.py  hooks.py  registry.py  router.py  sqlalchemy_models.py  store.py
react/: README.md  package-lock.json  package.json  tsconfig.json
react/src/: index.ts  types.ts
react/src/api/: CrudApiClient.ts
react/src/components/CrudPage/: index.tsx
react/src/components/DataTable/: index.module.css  index.tsx
react/src/components/JsonSchemaForm/: index.tsx
react/src/components/PersistedObjectCrud/: index.tsx
react/src/components/PersistedObjectRoutes/: index.tsx
react/src/context/: UiComponentContext.tsx
react/src/hooks/: useCrudGet.ts  useCrudList.ts  useCrudMutation.ts  useCrudSchema.ts
react/src/ui-components/: ColorPicker.tsx  JsonEditor.tsx  PasswordField.tsx  TagsInput.tsx  index.tsx
